Fix admin user style (#87)
* added last signed in field on admin page

* now sends empty string if date not defined

* fixed admin style

* Added spacing in users menu

* Fixed modal scrolling in case screen is too small

--- a/src/AKCore/Styles/general.scss
+++ b/src/AKCore/Styles/general.scss
@@ -193,11 +193,16 @@ a {
   display: block;
 }
 
+.spacing-right {
+  margin-right: 5px;
+}
+
 .roles {
+  display: flex;
+  gap: 5px;
   .role {
     background-color: $akred;
     border-radius: 5px;
-    margin-right: 10px;
     padding: 2px;
   }
 }
